kubernetes/external-applications/pihole/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pihole
  namespace: external-applications
spec:
  type: ExternalName
  ports:
  - name: http
    port: 80
  externalName: 10.0.0.10
