kubernetes/external-applications/pihole/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: external-applications
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.local.syspawn.com`)
      kind: Rule
      services:
        - name: pihole
          port: 80
  tls:
    secretName: local-syspawn-com-tls
